Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-89491

UserWriteBlockModeOpObserver should not take GlobalLock in onCommit handler

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2024-08-19, CAR Team 2024-09-02, CAR Team 2024-09-16
    • 1
    • None
    • 3
    • None
    • None
    • None
    • None
    • None
    • None

      This code tries to acquire a GlobalLock in an onCommit handler. This is problematic for multiple reasons:

      • This can throw an exception if the OpCtx is interrupted, which will crash the server
      • This can block indefinitely, which can delay other critical onCommit handlers from running

            Assignee:
            adam.farkas@mongodb.com Wolfee Farkas
            Reporter:
            louis.williams@mongodb.com Louis Williams
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: