SERVER-89491 UserWriteBlockModeOpObserver should not take GlobalLock in onCommit handler (#25955)

GitOrigin-RevId: 4271491d81170f4118a141319df44b506d752e4a